--- a/ChatService/build.gradle
+++ b/ChatService/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
 
+    // redis
+    implementation 'redis.clients:jedis:4.3.1'
+
     // apache-commons
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'commons-io:commons-io:2.16.1'
