--- a/JavaChatService/build.gradle
+++ b/JavaChatService/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
 
     // redis
-    implementation 'redis.clients:jedis:4.3.1'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.2.5'
 
     // kafka
     implementation 'org.apache.kafka:kafka-clients:3.4.0'
