--- a/JavaChatService/src/main/resources/application.yml
+++ b/JavaChatService/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
         username: postgres
         password: postgres
         driver-class-name: org.postgresql.Driver
+    data:
+        redis:
+            host: localhost
+            port: 6379
